# Proceso_ETL_Reporte_Emision_Polars_DuckDB

./: Carga_Reportes_Emision_Dev.py  Carga_Reportes_Emision_PySpark.py  Carga_Reportes_Emision_V3.py  Ordenar_Parquet_Emision.py  README.md  Reproceso_Parquet_Emision.py  pyproject.toml  requirements.txt  requirements_new.txt
