[project]
name = "proceso-etl-reporte-emision"
version = "0.2.0"
description = "Consolidar archivos CSVs y Excel de ramos en General en formato parquet para consumo en tablero BI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "charset-normalizer>=3.4.4",
    "duckdb>=1.4.3",
    "fastexcel>=0.18.0",
    "loguru>=0.7.3",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "pyspark==4.0.1",
    "rich>=14.2.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
]
